--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div class="pimg2">
     <div class="ptext">
-            <span class="border">
+            <span class="border trans">
                 Image Two Text
             </span>
     </div>
@@ -54,7 +54,7 @@
 
 <div class="pimg3">
     <div class="ptext">
-            <span class="border">
+            <span class="border trans">
                 Image Three Text
             </span>
     </div>
