fixed styling issue appearing on mobile

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div class="pimg1">
     <div class="ptext">
             <span class="border">
-                Parallax Website
+                Aziz Qureshi - 2022
             </span>
     </div>
 </div>
