fix styling on title content

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 <div class="parallax-wrapper">
 
     <div class="parallax-group intro-screen" id="intro">
-        Parallax Example Demo
+        <span> Parallax Example Demo </span>
     </div>
 
     <!--    -->
     <div class="parallax-group" id="group-1">
         <div class="parallax-layer base-layer">
-            Base Layer Page
+            Base Layer Page Group 1
         </div>
         <div class="parallax-layer mid-layer">
-            Mid Layer Page
+            Mid Layer Page Group 1
         </div>
     </div>
 
     <!-- -->
     <div class="parallax-group" id="group-2">
         <div class="parallax-layer mid-layer">
-            Mid Layer Page
+            Mid Layer Page Group 2
         </div>
         <div class="parallax-layer top-layer">
-            Top Layer Page
+            Top Layer Page Group 2
         </div>
     </div>
 
@@ -48,6 +48,6 @@
 </div>
 
 
-<script src="js/scripts.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
