added span tag to titles

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <div class="parallax-wrapper">
 
     <div class="parallax-group intro-screen" id="intro">
-        <span> Parallax Example Demo </span>
+        <span class="title"> Parallax Example Demo </span>
     </div>
 
     <!--    -->
     <div class="parallax-group" id="group-1">
         <div class="parallax-layer base-layer">
-            Base Layer Page Group 1
+            <span> Base Layer Page Group 1 </span>
         </div>
         <div class="parallax-layer mid-layer">
             Mid Layer Page Group 1
