adjust styling of layer titles and content

--- a/index.html
+++ b/index.html
@@ -22,27 +22,31 @@
     <!--    -->
     <div class="parallax-group" id="group-1">
         <div class="parallax-layer base-layer">
-            <span> Base Layer Page Group 1 </span>
+            <span class="title"> Base Layer Page Group 1 </span>
+            <p class="content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero. Lorem ipsum dolor
+                sit amet, consectetur adipisicing elit. Aliquam, hic? consectetur adipisicing elit. Aliquam,
+                hicconsectetur adipisicing elit. Aliquam, hicconsectetur adipisicing elit. Aliquam, hic Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero. Lorem ipsum dolor
+                sit amet, consectetur adipisicing elit. Aliquam, hic? consectetur adipisicing elit. Aliquam,
+                hicconsectetur adipisicing elit. Aliquam, hicconsectetur adipisicing elit. Aliquam, hic </p>
         </div>
         <div class="parallax-layer mid-layer">
-            Mid Layer Page Group 1
+            <!--           <span class="title"> Mid Layer Page Group 1 </span>-->
         </div>
     </div>
 
     <!-- -->
     <div class="parallax-group" id="group-2">
         <div class="parallax-layer mid-layer">
-            Mid Layer Page Group 2
+           <span class="title"> Mid Layer Page Group 2 </span>
         </div>
         <div class="parallax-layer top-layer">
-            Top Layer Page Group 2
+            <span class="title"> Top Layer Page Group 2 </span>
         </div>
     </div>
 
     <div class="parallax-group outro-screen" id="outro">
         END
     </div>
-
 
 
 </div>
