fixed some styling of background image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <span class="title"> Mid Layer Page Group 2 </span>
         </div>
         <div class="parallax-layer top-layer">
-            <span class="title"> Top Layer Page Group 2 </span>
+            <span class="title"> ..TOP.. </span>
         </div>
     </div>
 
